--- a/tests/Packages/Test_install.ipynb
+++ b/tests/Packages/Test_install.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -34,57 +34,43 @@
      "output_type": "stream",
      "text": [
       "Collecting arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python\n",
-      "  Cloning https://github.com/Guswib/Arenz_Group_Python to c:\\users\\gustav.wiberg\\appdata\\local\\temp\\pip-install-hj9cjevc\\arenz-group-python_a7f0c7edbe8242d09cf188bddbb04040\n",
-      "  Resolved https://github.com/Guswib/Arenz_Group_Python to commit a361a01ed428da3e40c26712654059e38bbb441f\n",
+      "  Cloning https://github.com/Guswib/Arenz_Group_Python to c:\\users\\gustav.wiberg\\appdata\\local\\temp\\pip-install-bf6hny7u\\arenz-group-python_8bd1c9541edf429496d4c851f93fcba7\n",
+      "  Resolved https://github.com/Guswib/Arenz_Group_Python to commit 4ad646d078d1b3b67a4bd5de57cd9c275c939c56\n",
       "  Preparing metadata (setup.py): started\n",
       "  Preparing metadata (setup.py): finished with status 'done'\n",
-      "Collecting nptdms (from arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python)\n",
-      "  Using cached npTDMS-1.9.0-py3-none-any.whl\n",
-      "Collecting matplotlib (from arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python)\n",
-      "  Using cached matplotlib-3.9.1-cp311-cp311-win_amd64.whl.metadata (11 kB)\n",
-      "Collecting pathlib (from arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python)\n",
-      "  Using cached pathlib-1.0.1-py3-none-any.whl.metadata (5.1 kB)\n",
-      "Collecting contourpy>=1.0.1 (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python)\n",
-      "  Using cached contourpy-1.2.1-cp311-cp311-win_amd64.whl.metadata (5.8 kB)\n",
-      "Collecting cycler>=0.10 (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python)\n",
-      "  Using cached cycler-0.12.1-py3-none-any.whl.metadata (3.8 kB)\n",
-      "Collecting fonttools>=4.22.0 (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python)\n",
-      "  Using cached fonttools-4.53.0-cp311-cp311-win_amd64.whl.metadata (165 kB)\n",
-      "Collecting kiwisolver>=1.3.1 (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python)\n",
-      "  Using cached kiwisolver-1.4.5-cp311-cp311-win_amd64.whl.metadata (6.5 kB)\n",
-      "Collecting numpy>=1.23 (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python)\n",
-      "  Using cached numpy-2.0.0-cp311-cp311-win_amd64.whl.metadata (60 kB)\n",
+      "Requirement already satisfied: nptdms in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (1.9.0)\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (3.9.1)\n",
+      "Requirement already satisfied: pathlib in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (1.0.1)\n",
+      "Requirement already satisfied: scipy in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (1.14.0)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (1.2.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (4.53.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (1.4.5)\n",
+      "Requirement already satisfied: numpy>=1.23 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (2.0.0)\n",
       "Requirement already satisfied: packaging>=20.0 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (24.1)\n",
-      "Collecting pillow>=8 (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python)\n",
-      "  Using cached pillow-10.4.0-cp311-cp311-win_amd64.whl.metadata (9.3 kB)\n",
-      "Collecting pyparsing>=2.3.1 (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python)\n",
-      "  Using cached pyparsing-3.1.2-py3-none-any.whl.metadata (5.1 kB)\n",
+      "Requirement already satisfied: pillow>=8 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (10.4.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (3.1.2)\n",
       "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (2.9.0)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\gustav.wiberg\\documents\\github\\python\\arenz_group_python\\.conda\\lib\\site-packages (from python-dateutil>=2.7->matplotlib->arenz_group_python@ git+https://github.com/Guswib/Arenz_Group_Python) (1.16.0)\n",
-      "Using cached matplotlib-3.9.1-cp311-cp311-win_amd64.whl (8.0 MB)\n",
-      "Using cached pathlib-1.0.1-py3-none-any.whl (14 kB)\n",
-      "Using cached contourpy-1.2.1-cp311-cp311-win_amd64.whl (188 kB)\n",
-      "Using cached cycler-0.12.1-py3-none-any.whl (8.3 kB)\n",
-      "Using cached fonttools-4.53.0-cp311-cp311-win_amd64.whl (2.2 MB)\n",
-      "Using cached kiwisolver-1.4.5-cp311-cp311-win_amd64.whl (56 kB)\n",
-      "Using cached numpy-2.0.0-cp311-cp311-win_amd64.whl (16.5 MB)\n",
-      "Using cached pillow-10.4.0-cp311-cp311-win_amd64.whl (2.6 MB)\n",
-      "Using cached pyparsing-3.1.2-py3-none-any.whl (103 kB)\n",
       "Building wheels for collected packages: arenz_group_python\n",
       "  Building wheel for arenz_group_python (setup.py): started\n",
       "  Building wheel for arenz_group_python (setup.py): finished with status 'done'\n",
-      "  Created wheel for arenz_group_python: filename=Arenz_Group_Python-0.0.2-py3-none-any.whl size=4530 sha256=25c7d5cd92746508aca15feb32e7d918920ad97296b27537d2dd27d98a909fd7\n",
-      "  Stored in directory: C:\\Users\\gustav.wiberg\\AppData\\Local\\Temp\\pip-ephem-wheel-cache-ldulcwmo\\wheels\\e7\\50\\a9\\3224467eb40352eec80bb2ec0ca2b0ceabb74154f19cf4d783\n",
+      "  Created wheel for arenz_group_python: filename=Arenz_Group_Python-0.0.3-py3-none-any.whl size=4689 sha256=5871c9db67efceca2bb004c99fc632b8b6d84ecb1b9e5c48dbd1897645332f55\n",
+      "  Stored in directory: C:\\Users\\gustav.wiberg\\AppData\\Local\\Temp\\pip-ephem-wheel-cache-dn8a_bpm\\wheels\\e7\\50\\a9\\3224467eb40352eec80bb2ec0ca2b0ceabb74154f19cf4d783\n",
       "Successfully built arenz_group_python\n",
-      "Installing collected packages: pathlib, pyparsing, pillow, numpy, kiwisolver, fonttools, cycler, nptdms, contourpy, matplotlib, arenz_group_python\n",
-      "Successfully installed arenz_group_python-0.0.2 contourpy-1.2.1 cycler-0.12.1 fonttools-4.53.0 kiwisolver-1.4.5 matplotlib-3.9.1 nptdms-1.9.0 numpy-2.0.0 pathlib-1.0.1 pillow-10.4.0 pyparsing-3.1.2\n"
+      "Installing collected packages: arenz_group_python\n",
+      "  Attempting uninstall: arenz_group_python\n",
+      "    Found existing installation: Arenz_Group_Python 0.0.2\n",
+      "    Uninstalling Arenz_Group_Python-0.0.2:\n",
+      "      Successfully uninstalled Arenz_Group_Python-0.0.2\n",
+      "Successfully installed arenz_group_python-0.0.3\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  Running command git clone --filter=blob:none --quiet https://github.com/Guswib/Arenz_Group_Python 'C:\\Users\\gustav.wiberg\\AppData\\Local\\Temp\\pip-install-hj9cjevc\\arenz-group-python_a7f0c7edbe8242d09cf188bddbb04040'\n"
+      "  Running command git clone --filter=blob:none --quiet https://github.com/Guswib/Arenz_Group_Python 'C:\\Users\\gustav.wiberg\\AppData\\Local\\Temp\\pip-install-bf6hny7u\\arenz-group-python_8bd1c9541edf429496d4c851f93fcba7'\n"
      ]
     }
    ],
