--- a/tests/Packages/Install_Arenz_Group_Python.ipynb
+++ b/tests/Packages/Install_Arenz_Group_Python.ipynb
@@ -4,39 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Install Common Packages\n",
-    "Run this notebook to install most common packages to a python kernal.\n",
+    "# General installation from github\n",
+    "pip install \"Package\" @ git+\"URL of the repository#subdirectory=path\"\n",
     "\n",
-    "Start by placing this file in the root of a project. \n",
-    "If you are using vscode, create a new venv, before starting. \n",
-    "\n",
-    "### Conda env\n",
-    "if you are using a conda venv, you might get an error message: \n",
-    "\n",
-    "\"Running cells with '.conda (Python 3.11.9)' requires the ipykernel package.....\"\n",
-    "\n",
-    "then open the terminal (View menu and then select terminal)\n",
-    "and then run the code suggested code:. \n",
-    "Remember to add \" \" around the path to the venv.\n",
-    "\n",
-    "'conda install -p \"\\<long Path\\>\\\\.conda\" ipykernel --update-deps --force-reinstall'"
+    "Here, we want to install Arenz_Group Python package."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "path_to_executable = \"\\\"\" + str(sys.executable) +  \"\\\"\"\n",
-    "print(path_to_executable)"
+    "path_to_executable = \"\\\"\" + str(sys.executable) +  \"\\\"\" #must be used if there are any spaces in the path"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "This can take a while to install....2min or so"
+   ]
   },
   {
    "cell_type": "code",
@@ -56,22 +45,18 @@
     }
    ],
    "source": [
-    "#req_packages = [\"pandas\",\"numpy\",\"nptdms\",\"matplotlib\",\"pathlib\"]\n",
+    "#works for most venv.\n",
     "\n",
-    "!{path_to_executable} -m pip install numpy\n",
-    "!{path_to_executable} -m pip install pandas\n",
-    "!{path_to_executable} -m pip install nptdms\n",
-    "!{path_to_executable} -m pip install matplotlib\n",
-    "!{path_to_executable} -m pip install pathlib\n",
-    "!{path_to_executable} -m pip install scipy\n",
-    "\n"
+    "!{path_to_executable} -m pip install arenz_group_python@git+https://github.com/Guswib/Arenz_Group_Python"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check which modules that are installed:"
+    "If you donot have pip or git installed in your conda env., run:\n",
+    "conda install pip\n",
+    "conda install git"
    ]
   },
   {
@@ -82,13 +67,6 @@
    "source": [
     "help('modules')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
