--- a/tests/data/set1/Plot_Steps.ipynb
+++ b/tests/data/set1/Plot_Steps.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading arenz_group_python\n",
-      "['c:\\\\Users\\\\gustav.wiberg\\\\Documents\\\\GitHub\\\\Python\\\\Arenz_Group_Python\\\\.venv\\\\Lib\\\\site-packages\\\\arenz_group_python\\\\contents']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "from arenz_group_python.ec_data import EC_Data\n",
@@ -23,22 +14,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TDMS file was not found: \n",
+      "TDMS file was not found: \n",
+      "TDMS file was not found: \n",
+      "TDMS file was not found: \n",
+      "TDMS file was not found: \n"
+     ]
+    }
+   ],
    "source": [
     "#Find CV files to plot\n",
     "files = list(Path().glob('Steps*.tdms'))\n",
     "\n",
     "#Load all data files\n",
+    "data = [EC_Data(\"\") for _ in range(len(files))]\n",
     "data = []\n",
+    "i=0\n",
     "for path_to_file in files:\n",
-    "    data.append(EC_Data(path_to_file))\n"
+    "    data.append(EC_Data(path_to_file))\n",
+    "    #data[i] = EC_Data(path_to_file)\n",
+    "    i=i+1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
